# ros_hardware_in_the_loop_system

./: .gitignore  .gitmodules  LICENSE  README-ja.md  README.md
docker/: Dockerfile  build_docker_image.sh  docker-compose.yml  launch_docker.sh
docs/: hils_expansion_roadmap.md  hils_verification_bom.md  hils_verification_guide.md  ros_hils_architecture.md
firmware/: frame.raw
firmware/common/: README.md
firmware/common/include/: hils_frame_protocol.h
firmware/esp32_can_bridge/: README.md
firmware/rp2040_actuator_servo_pwm/: CMakeLists.txt
firmware/rp2040_actuator_servo_pwm/pio/: pwm_capture.pio  pwm_servo.pio
firmware/rp2040_actuator_servo_pwm/src/: main.c
firmware/rp2040_camera_uvc/: CMakeLists.txt  README.md
firmware/rp2040_camera_uvc/src/: frame_buffer.c  spi_receiver.h  tusb_config.h  uvc_device.c
firmware/rp2040_camera_uvc_spi_sender/: CMakeLists.txt  README.md
firmware/rp2040_camera_uvc_spi_sender/src/: main.c  spi_sender.h
firmware/rp2040_cdc_spi_sender/: CMakeLists.txt  README.md
firmware/rp2040_cdc_spi_sender/src/: main.c  spi_sender.c  spi_sender.h
firmware/rp2040_encoder_emulator/: README.md
firmware/rp2040_encoder_quadrature/: CMakeLists.txt  README.md
firmware/rp2040_encoder_quadrature/pio/: encoder_output.pio
firmware/rp2040_encoder_quadrature/src/: main.c
firmware/rp2040_ethernet_bridge/: .gitignore  README.md
firmware/rp2040_i2c_slave/: CMakeLists.txt  README.md  tusb_config.h
firmware/rp2040_i2c_slave/pio/: i2c_slave.pio
firmware/rp2040_imu_invensense_mpu6050/: CMakeLists.txt  README.md
firmware/rp2040_imu_invensense_mpu6050/src/: main.c
firmware/rp2040_pwm_servo/: CMakeLists.txt  tusb_config.h
firmware/rp2040_pwm_servo/src/: main.c
firmware/rp2040_uvc_bridge/: CMakeLists.txt  README.md
firmware/rp2040_uvc_bridge/src/: blank_jpeg.h  frame_buffer.h  main.c  spi_receiver.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h  uvc_device.c  uvc_device.h
firmware/w5500_livox_emulator/: CMakeLists.txt  README.md
firmware/w5500_livox_emulator/src/: cdc_receiver.c  cdc_receiver.h  livox_protocol.c  livox_protocol.h  main.c  w5500_spi.c  w5500_spi.h
hardware/schematics/FT234X_cross_connection_board/: FT234X_cross_connection_board.kicad_pcb  FT234X_cross_connection_board.kicad_prl  FT234X_cross_connection_board.kicad_pro  FT234X_cross_connection_board.kicad_sch  fp-lib-table  hils_modules.kicad_sym  sym-lib-table
hardware/schematics/FT234X_cross_connection_board/hils_modules.pretty/: AE-FT234X.kicad_mod
hardware/schematics/Raspberry_Pi_Pico_connection_board_for_UVC/: Raspberry_Pi_Pico_connection_board_for_UVC.kicad_pcb  Raspberry_Pi_Pico_connection_board_for_UVC.kicad_prl  Raspberry_Pi_Pico_connection_board_for_UVC.kicad_pro  Raspberry_Pi_Pico_connection_board_for_UVC.kicad_sch
ros_packages/hils_bridge_actuator/hils_bridge_actuator_pwm/: CMakeLists.txt  package.xml
ros_packages/hils_bridge_actuator/hils_bridge_actuator_pwm/config/: default_params.yaml
ros_packages/hils_bridge_actuator/hils_bridge_actuator_pwm/hils_bridge_actuator_pwm/: pwm_bridge_node.py
ros_packages/hils_bridge_actuator/hils_bridge_actuator_pwm/launch/: pwm_bridge.launch.py
ros_packages/hils_bridge_base/: CMakeLists.txt  package.xml
ros_packages/hils_bridge_base/hils_bridge_base/: __init__.py  frame_protocol.py  network_utils.py  serial_bridge_base.py  udp_emulator_base.py
ros_packages/hils_bridge_camera/: README.md
ros_packages/hils_bridge_camera/hils_bridge_camera_uvc/: CMakeLists.txt  package.xml
ros_packages/hils_bridge_camera/hils_bridge_camera_uvc/config/: default_params.yaml
ros_packages/hils_bridge_camera/hils_bridge_camera_uvc/hils_bridge_camera_uvc/: frame_protocol.py  uvc_bridge_node.py
ros_packages/hils_bridge_camera/hils_bridge_camera_uvc/launch/: uvc_bridge.launch.py
ros_packages/hils_bridge_can/: README.md
ros_packages/hils_bridge_encoder/: README.md
ros_packages/hils_bridge_gps/: README.md
ros_packages/hils_bridge_imu/: README.md
ros_packages/hils_bridge_lidar/: README.md
ros_packages/hils_bridge_lidar/hils_bridge_lidar_livox/: CMakeLists.txt  README.md  package.xml
ros_packages/hils_bridge_lidar/hils_bridge_lidar_livox/config/: default_params.yaml
ros_packages/hils_bridge_lidar/hils_bridge_lidar_livox/hils_bridge_lidar_livox/: frame_protocol.py  livox_bridge_node.py  livox_emulator_node.py
ros_packages/hils_bridge_lidar/hils_bridge_lidar_livox/launch/: livox_bridge.launch.py  livox_emulator.launch.py
ros_packages/hils_bridge_lidar/hils_bridge_lidar_ouster/: CMakeLists.txt  package.xml
ros_packages/hils_bridge_lidar/hils_bridge_lidar_ouster/config/: default_params.yaml
ros_packages/hils_bridge_lidar/hils_bridge_lidar_ouster/hils_bridge_lidar_ouster/: ouster_emulator_node.py
ros_packages/hils_bridge_lidar/hils_bridge_lidar_ouster/launch/: ouster_emulator.launch.py
ros_packages/hils_bridge_lidar/hils_bridge_lidar_velodyne/: CMakeLists.txt  package.xml
ros_packages/hils_bridge_lidar/hils_bridge_lidar_velodyne/config/: default_params.yaml
ros_packages/hils_bridge_lidar/hils_bridge_lidar_velodyne/hils_bridge_lidar_velodyne/: velodyne_emulator_node.py
ros_packages/hils_bridge_lidar/hils_bridge_lidar_velodyne/launch/: velodyne_emulator.launch.py
ros_packages/hils_bridge_sensor/hils_bridge_sensor_i2c/: CMakeLists.txt  package.xml
ros_packages/hils_bridge_sensor/hils_bridge_sensor_i2c/config/: default_params.yaml
ros_packages/hils_bridge_sensor/hils_bridge_sensor_i2c/hils_bridge_sensor_i2c/: i2c_sensor_bridge_node.py
ros_packages/hils_bridge_sensor/hils_bridge_sensor_i2c/launch/: i2c_sensor_bridge.launch.py
ros_packages/hils_bridge_serial/hils_bridge_serial_gps/: CMakeLists.txt  package.xml
ros_packages/hils_bridge_serial/hils_bridge_serial_gps/config/: default_params.yaml
ros_packages/hils_bridge_serial/hils_bridge_serial_gps/hils_bridge_serial_gps/: gps_bridge_node.py
ros_packages/hils_bridge_serial/hils_bridge_serial_imu/: CMakeLists.txt  package.xml
ros_packages/hils_bringup/: CMakeLists.txt  package.xml
tools/: mp4_to_gif.sh
(+4 files in other folders)
